修改完成專案

--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
                     </div>
                     <div class="project-item">
                         <div class="project-image">
-                            <img src="./image/sideproject4.jpg" alt="">
+                            <img src="https://user-images.githubusercontent.com/77038018/140605289-ff0982c6-c3b9-4750-9c82-1d695951fb36.png" alt="">
                             <div class="btn-list">
-                                <button><a href="https://github.com/LunZaiZai0223/FE210" target="_blank"><i class="fab fa-github-alt"></i></a></button>
-                                <button><a href="https://lunzaizai0223.github.io/FE210/" target="_blank"><i class="fas fa-external-link-square-alt"></i></a></button>
+                                <button><a href="https://github.com/LunZaiZai0223/Tic-Tac-Toe" target="_blank"><i class="fab fa-github-alt"></i></a></button>
+                                <button><a href="https://lunzaizai0223.github.io/Tic-Tac-Toe/" target="_blank"><i class="fas fa-external-link-square-alt"></i></a></button>
                             </div>
                         </div>
                         <div class="project-description">
-                            <h2>Twitch 直播列表</h2>
-                            <p>此專案為參與課程 [FE210] 從新手到中手：前端工程加強班 的成果。由於課程是2017年的錄製，所以實際的 API 串接與套件的使用我是自行上網研究的。不僅如此，我也有延伸實作 RWD 及修改版面配置。</p>
+                            <h2>TIC TAC TOE</h2>
+                            <p>此專案為線上開源課程 THE ODIN PROJECT 的章節 PROJECT: TIC TAC TOE 的學習專案。無使用任何套件，純 HTML, SCSS 及 JavaScript 開發。使用者可以自行選擇雙人遊戲或者單人遊戲（與 AI 遊戲）。</p>
                         </div>
                     </div>
                     <div class="project-item">
@@ -119,7 +119,20 @@
                         </div>
                         <div class="project-description">
                             <h2>我的圖書館</h2>
-                            <p>參加開源線上課程 The Odin Project 後完成的專案，使用者可以自由地新增書籍，並設有篩選顯示書籍是否已讀過了。專案使用純 HTML, SCSS 及 JavaScript 開發，並使用網頁的 localStorage 儲存資料。</p>
+                            <p>參加線上開源課程 THE ODIN PROJECT 後完成的專案，使用者可以自由地新增書籍，並設有篩選顯示書籍是否已讀過了。專案使用純 HTML, SCSS 及 JavaScript 開發，並使用網頁的 localStorage 儲存資料。</p>
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <div class="project-image">
+                            <img src="./image/臺灣旅遊景點導覽.png" alt="">
+                            <div class="btn-list">
+                                <button><a href="https://github.com/LunZaiZai0223/THE_F2E_3rd_Week01" target="_blank"><i class="fab fa-github-alt"></i></a></button>
+                                <button><a href="https://lunzaizai0223.github.io/THE_F2E_3rd_Week01/" target="_blank"><i class="fas fa-external-link-square-alt"></i></a></button>
+                            </div>
+                        </div>
+                        <div class="project-description">
+                            <h2>臺灣旅遊景點導覽</h2>
+                            <p>此為參加 The F2E 3rd 的活動所完成的專案。專案的版型是參與活動的設計師提供，實作功能則是自行撰寫程式碼完成。使用者可以藉由選單觀看不同的旅遊資訊，也可以依照地區搜尋。此專案為純 HTML, SCSS 及 JavaScript 開發，使用 Fetch API 接收政府 TDX 的 API 資料。</p>
                         </div>
                     </div>
                 </div>
